Fix text align in profile image menu

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -4,3 +4,5 @@ $dark-blue: rgb(0,53,105);
 $light-gray: #c7c7c7;
 $dark-gray: #999;
 $black: #262626;
+$modal-gray: rgba(0,0,0,.5);
+$menu-gray: #eeeeee
