--- a/app/assets/stylesheets/elements/_button.scss
+++ b/app/assets/stylesheets/elements/_button.scss
@@ -35,6 +35,8 @@
 .camera:hover,
 .explore:hover,
 .notification:hover,
-.self:hover {
+.self:hover,
+.profile-image:hover,
+.gear:hover {
   cursor: pointer;
 }
