--- a/app/assets/stylesheets/elements/_user.scss
+++ b/app/assets/stylesheets/elements/_user.scss
@@ -3,7 +3,6 @@
   width: 935px;
   display: flex;
   flex-direction: column;
-  border: 1px $black solid;
 }
 
 .user-info {
@@ -18,11 +17,9 @@
 }
 
 .info > div:first-child {
-  border: 1px $black solid;
 }
 
 .info > div:nth-child(2) {
-  border: 1px $black solid;
   margin-top: 10px;
   font-size: 16px;
   justify-content: flex-start;
@@ -48,7 +45,7 @@
 .username {
   font-size: 40px;
   font-family: sfns;
-  font-weight: 100;
+  font-weight: bold;
   color: $black;
 }
 
